# cogniconsole

./: LICENSE  README.md  pyproject.toml
cartridges/investigation-game/: main.py  template.env
cartridges/investigation-game/_bots/_metabot/_assets/_aimodel-apis/: ollama.py  openai.py
cartridges/investigation-game/_bots/_metabot/_logic/start/: main.py
cartridges/investigation-game/_bots/agents-boss/_assets/: louvre-heist.json
cartridges/investigation-game/_bots/agents-boss/_logic/add-clues/: get-clues.md  get-clues_new-stadard_not-working.md  go-to-another-city.md  invalid-location.md  main.py  new-city-travel-unlocked.md  no-relevant-clues-added.md  relevant-clues-added.md  repeated-empty-clues.md  validate-clues.md
cartridges/investigation-game/_bots/agents-boss/_logic/boot/: give-the-mission.md  main.py
cartridges/investigation-game/_bots/agents-boss/_logic/start/: main.py  prompt.md  prompt_new-standar_not-working-properly.md  template_main.py
cartridges/investigation-game/_bots/agents-boss/_logic/travel/: average-travel-days.md  city-not-allowed.md  get-city-name.md  invalid-city-slug.md  (+5 more)
cartridges/investigation-game/_bots/agents-boss/_memory/: player-progress.json  template_player-progress.json
cogniconsole/: __init__.py  bot.py  main.py  node_loader.py
data-analysis/: cogniconsole-data-analysis.xlsx
data-analysis/prompt-structures/semi-structured/: prompt.md
data-analysis/prompt-structures/unstructured/: prompt.md
docs/: authors-motivations.md  authors-notes.md  how-to-create-cartridges.md  start-here.md  the-console-core-library.md
(+18 files in other folders)
